Fixed shaders not working with fading